--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <button class="l-mainLanding__buttonSubscribe" type="submit">INSCREVA-SE AGORA MESMO</button>
         
       </div>
-      <img class="l-mainLanding_waveDown" src="../Landing-page/img/waveTop-mobile.svg" alt="">
+      <img class="l-mainLanding_waveDown" src="../img/waveTop-mobile.svg" alt="">
     </section>
   </main>
   <br> <br> <br> <br>
