--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </section>
     <section class="l-mainLanding__sectionVideo">
-      <img class="l-mainLanding_waveDown" src="../Landing-page/img/waveDown-mobile.svg" alt="">
+      <img class="l-mainLanding_waveDown" src="/img/waveDown-mobile.svg" alt="">
       <div class="l-mainLanding__videoGroup text-center">
        <li>
         <iframe class="text-center" width="560" height="315" src="https://www.youtube.com/embed/1IB9asYT-C8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
